--- a/app.html
+++ b/app.html
@@ -100,6 +100,7 @@
                                 <input type="number" 
                                        class="form-control" 
                                        v-model.number="product.qty" 
+                                       min="1"
                                        @change="modifyCartItem(product)">
                                 <span class="input-group-text" >{{ product.product.unit }}</span>
                             </div>
